--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,7 +7,6 @@
     <title>Document</title>
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
-
 <body>
     <header>
         <nav>
@@ -28,9 +26,7 @@
                 <div class="content">
                     <p class="car-information">Único dono</p>
                     <h2>911 turbo</h2>
-                    <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil veniam
-                        delectus ipsum blanditiis cum recusandae architecto a ea commodi neque qui culpa quibusdam
-                        voluptas eos, ex iure quae dignissimos ut?</p>
+                    <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil veniam delectus ipsum blanditiis cum recusandae architecto a ea commodi neque qui culpa quibusdam voluptas eos, ex iure quae dignissimos ut?</p>
                     <button class="button1">Saiba mais</button>
                 </div>
             </div>
@@ -41,9 +37,7 @@
                 <div class="content">
                     <p class="car-information">Único dono</p>
                     <h2>911 turbo</h2>
-                    <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil veniam
-                        delectus ipsum blanditiis cum recusandae architecto a ea commodi neque qui culpa quibusdam
-                        voluptas eos, ex iure quae dignissimos ut?</p>
+                    <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil veniam delectus ipsum blanditiis cum recusandae architecto a ea commodi neque qui culpa quibusdam voluptas eos, ex iure quae dignissimos ut?</p>
                     <button class="button1">Saiba mais</button>
                 </div>
             </div>
@@ -54,9 +48,7 @@
                 <div class="content">
                     <p class="car-information">Único dono</p>
                     <h2>911 turbo</h2>
-                    <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil veniam
-                        delectus ipsum blanditiis cum recusandae architecto a ea commodi neque qui culpa quibusdam
-                        voluptas eos, ex iure quae dignissimos ut?</p>
+                    <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil veniam delectus ipsum blanditiis cum recusandae architecto a ea commodi neque qui culpa quibusdam voluptas eos, ex iure quae dignissimos ut?</p>
                     <button class="button1">Saiba mais</button>
                 </div>
             </div>
@@ -76,5 +68,4 @@
     </section>
     <script src="script.js"></script>
 </body>
-
 </html>
